--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/img/my-photo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=EB+Garamond:opsz,wght@8..24,400;8..24,700&family=IM+Fell+English+SC" rel="stylesheet"> 
-    <title>harry-potter-portfolio</title>
+    <title>Yaroslav Bezvesilnyi Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
